--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>nl.erdf</groupId>
-  <artifactId>main</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <artifactId>erdf-parent</artifactId>
   <packaging>pom</packaging>
   <name>eRDF query engine</name>
   <description>RDF query engine based on evolutionary algorithms</description>
+  <url>http://www.erdf.nl</url>
+  <scm>
+  	<url>https://github.com/cgueret/eRDF</url>
+  </scm>
+  <modules>
+  	<module>nl.erdf.core</module>
+  </modules>
 </project>
