--- a/nl.erdf.core/pom.xml
+++ b/nl.erdf.core/pom.xml
@@ -10,4 +10,28 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>eRDF query engine (core)</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.hp.hpl.jena</groupId>
+  		<artifactId>jena</artifactId>
+  		<version>2.6.4</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient</artifactId>
+  		<version>4.0.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>com.hp.hpl.jena</groupId>
+  		<artifactId>arq</artifactId>
+  		<version>2.8.7</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>commons-cli</groupId>
+  		<artifactId>commons-cli</artifactId>
+  		<version>1.2</version>
+  		<type>jar</type>
+  		<scope>compile</scope>
+  	</dependency>
+  </dependencies>
 </project>
