--- a/nl.erdf.datalayer-sparql/pom.xml
+++ b/nl.erdf.datalayer-sparql/pom.xml
@@ -7,39 +7,37 @@
 		<version>0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>nl.erdf</groupId>
-	<artifactId>core</artifactId>
+	<artifactId>datalayer-sparql</artifactId>
 	<version>0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<name>eRDF query engine (core)</name>
+	<name>eRDF SPARQL DataLayer</name>
 	<dependencies>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>jena</artifactId>
 			<version>2.6.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.0.3</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.hp.hpl.jena</groupId>
 			<artifactId>arq</artifactId>
 			<version>2.8.7</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
+			<groupId>nl.erdf</groupId>
+			<artifactId>core</artifactId>
+			<version>0.1-SNAPSHOT</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.6</version>
-				<configuration>
-					<skipTests>true</skipTests>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
