--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.4</version>
+			</plugin>
 		</plugins>
 	</build>
 	<properties>
@@ -26,7 +31,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<scm>
-		<url>https://github.com/cgueret/eRDF</url>
+		<developerConnection>cgueret</developerConnection>
+		<url>scm:git:git@github.com:cgueret/eRDF.git</url>
 	</scm>
 	<modules>
 		<module>nl.erdf.core</module>
