Updated the pom.xml and the readme

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,6 @@
 		<module>nl.erdf.core</module>
 		<!-- Ignored because of compilation problems <module>nl.erdf.datalayer-hbase</module> -->
 		<module>nl.erdf.datalayer-sparql</module>
-		<module>nl.erdf.www</module>
+		<!-- Not ready yet <module>nl.erdf.www</module> -->
 	</modules>
 </project>
