--- a/nl.erdf.datalayer-hbase/pom.xml
+++ b/nl.erdf.datalayer-hbase/pom.xml
@@ -6,10 +6,8 @@
 		<groupId>nl.erdf</groupId>
 		<version>0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>nl.erdf</groupId>
 	<artifactId>datalayer-hbase</artifactId>
 	<name>eRDF HBase DataLayer</name>
-	<version>0.1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>nl.erdf</groupId>
@@ -25,11 +23,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>0.20.2</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<groupId>org.apache.hbase</groupId>
+			<artifactId>hbase</artifactId>
+			<version>0.90.5</version>
 		</dependency>
 	</dependencies>
 	<build>
