--- a/nl.erdf.datalayer-hbase/pom.xml
+++ b/nl.erdf.datalayer-hbase/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>commons-compress</artifactId>
 			<version>1.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>[1.6.0, )</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
