--- a/nl.erdf.datalayer-hbase/pom.xml
+++ b/nl.erdf.datalayer-hbase/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>[1.6.0, )</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>[1.6.0, )</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
