--- a/nl.erdf.datalayer-hbase/pom.xml
+++ b/nl.erdf.datalayer-hbase/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>log4j-over-slf4j</artifactId>
 			<version>[1.6.0, )</version>
 		</dependency>
+		<dependency>
+			<groupId>nl.vu.datalayer.sail</groupId>
+			<artifactId>hbase</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
