--- a/nl.erdf.datalayer-hbase/pom.xml
+++ b/nl.erdf.datalayer-hbase/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>hbase</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jsr107cache</groupId>
+			<artifactId>jsr107cache</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
