--- a/nl.erdf.datalayer-sparql/pom.xml
+++ b/nl.erdf.datalayer-sparql/pom.xml
@@ -35,6 +35,17 @@
 		<!-- <resources> <resource> <directory>${basedir}/target/dependency</directory> 
 			</resource> </resources> -->
 	</build>
+	
+	<repositories>
+		<repository>
+			<id>sesame</id>
+			<name>Sesame Maven Repository</name>
+			<url>http://repo.aduna-software.org/maven2/releases</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>nl.erdf</groupId>
@@ -53,7 +64,7 @@
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-queryalgebra-model</artifactId>
-			<version>2.6.4</version>
+			<version>2.6.10</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
